--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html>
   <head>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0;} </style>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/p5.min.js"></script>
     <script src="js/addons/p5.dom.min.js"></script>
-    <script src="js/addons/p5.sound.min.js"></script>
     <script src="js/sketch.js"></script>
   </head>
   <body>
+      <div class="row">
+          <div class="col-xs-10 col-xs-offset-1 text-center" id="controls">
+            <div class="btn-group" role="group" aria-label="...">
+                <a class="btn btn-default" id="play" href="#"><span class="glyphicon glyphicon-play"></span>&nbsp; Reproducir</a>
+                <a class="btn btn-default" id="pause" href="#"><span class="glyphicon glyphicon-pause"></span>&nbsp; Pausar</a>
+                <a class="btn btn-default" id="clean" href="#"><span class="glyphicon glyphicon-unchecked"></span>&nbsp; Limpiar</a>
+                <a class="btn btn-default" id="random" href="#"><span class="glyphicon glyphicon-qrcode"></span>&nbsp; Aleatorio</a>
+             </div>
+          </div>
+      </div>
+      <div id="canvas" class="canvas-div text-center"></div>
   </body>
 </html>
