--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   </head>
   <body>
       <div class="row">
+          <div class="col-xs-10 col-xs-offset-1 text-center">
+                <label>Resolución</label>
+                <div class="form-inline">
+                    <div class="input-group">
+                    <a class="btn btn-default input-group-addon" id="configure" href="#">Configurar</a><input type="number" value="10" id="resolution" class="form-control"><div class="input-group-addon">px</div>
+                    </div>
+                </div>
+          </div>
+      </div>
+      <div class="row">
           <div class="col-xs-10 col-xs-offset-1 text-center" id="controls">
             <div class="btn-group" role="group" aria-label="...">
                 <a class="btn btn-default" id="play" href="#"><span class="glyphicon glyphicon-play"></span>&nbsp; Reproducir</a>
@@ -17,6 +27,36 @@
                 <a class="btn btn-default" id="clean" href="#"><span class="glyphicon glyphicon-unchecked"></span>&nbsp; Limpiar</a>
                 <a class="btn btn-default" id="random" href="#"><span class="glyphicon glyphicon-qrcode"></span>&nbsp; Aleatorio</a>
              </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-xs-6 col-xs-offset-3 text-center" id="controls">
+            <div class="form-inline">
+                <label>Muerte por Sobrepoblación (cota superior)</label><br/>
+                <input type="range" min="0" max="8" list="tickmarks" id="overSlider" class="form-control slider-bar"/>
+                <datalist id="tickmarks">
+                  <option value="0">
+                  <option value="1">
+                  <option value="2">
+                  <option value="3">
+                  <option value="4">
+                  <option value="5">
+                  <option value="6">
+                  <option value="7">
+                  <option value="8">
+                </datalist>
+                <input type="number" class="form-control slider-number" id ="overValue"/>
+            </div>
+            <div class="form-inline">
+                <label>Muerte por Subpoblación (cota inferior)</label><br/>
+                <input type="range" min="0" max="8" list="tickmarks" id="subSlider" class="form-control slider-bar"/>
+                <input type="number" class="form-control slider-number" id ="subValue"/>
+            </div>
+            <div class="form-inline">
+                <label>Nacimiento (valor exacto)</label><br/>
+                <input type="range" min="0" max="8" list="tickmarks" id="birthSlider" class="form-control slider-bar"/>
+                <input type="number" class="form-control slider-number" id ="birthValue"/>
+            </div>
           </div>
       </div>
       <div id="canvas" class="canvas-div text-center"></div>
