--- a/index.html
+++ b/index.html
@@ -9,8 +9,69 @@
     <script src="js/sketch.js"></script>
   </head>
   <body>
+        <h1 class="title">Game of Life</h1>
+          <div id="canvas" class="canvas-div text-center"></div>
+          <div class="row">
+              <div class="col-xs-10 col-xs-offset-1 text-center" id="controls">
+                <div class="btn-group" role="group" aria-label="...">
+                    <a class="btn btn-default" id="play"><span class="glyphicon glyphicon-play"></span>&nbsp; Reproducir</a>
+                    <a class="btn btn-default" id="pause"><span class="glyphicon glyphicon-pause"></span>&nbsp; Pausar</a>
+                    <a class="btn btn-default" id="clean"><span class="glyphicon glyphicon-unchecked"></span>&nbsp; Limpiar</a>
+                    <a class="btn btn-default" id="random"><span class="glyphicon glyphicon-qrcode"></span>&nbsp; Aleatorio</a>
+                 </div>
+              </div>
+          </div>
+
+          <div class="row">
+              <div class="col-xs-6 col-xs-offset-3 text-center" id="controls">
+                 <h2>Configuración Dinámica</h2>
+                 <div class="form-inline">
+                     <label>Reloj del mundo (tableros/segundo)</label><br/>
+                     <input type="range" min="1" max="30" list="clockmarks" id="clockSlider" class="form-control slider-bar"/>
+                     <datalist id="clockmarks">
+                       <option value="1">
+                       <option value="5">
+                       <option value="10">
+                       <option value="15">
+                       <option value="20">
+                       <option value="25">
+                       <option value="30">
+                     </datalist>
+                      <input type="number" class="form-control slider-number" id ="clockValue"/>
+
+                 </div>
+                <div class="form-inline">
+                    <label>Muerte por Sobrepoblación (cota superior)</label><br/>
+                    <input type="range" min="0" max="8" list="tickmarks" id="overSlider" class="form-control slider-bar"/>
+                    <datalist id="tickmarks">
+                      <option value="0">
+                      <option value="1">
+                      <option value="2">
+                      <option value="3">
+                      <option value="4">
+                      <option value="5">
+                      <option value="6">
+                      <option value="7">
+                      <option value="8">
+                    </datalist>
+                    <input type="number" class="form-control slider-number" id ="overValue"/>
+                </div>
+                <div class="form-inline">
+                    <label>Muerte por Subpoblación (cota inferior)</label><br/>
+                    <input type="range" min="0" max="8" list="tickmarks" id="subSlider" class="form-control slider-bar"/>
+                    <input type="number" class="form-control slider-number" id ="subValue"/>
+                </div>
+                <div class="form-inline">
+                    <label>Nacimiento (valor exacto)</label><br/>
+                    <input type="range" min="0" max="8" list="tickmarks" id="birthSlider" class="form-control slider-bar"/>
+                    <input type="number" class="form-control slider-number" id ="birthValue"/>
+                </div>
+              </div>
+      </div>
+
       <div class="row">
           <div class="col-xs-10 col-xs-offset-1 text-center">
+                  <h2>Configuración Estática (reinicia la simulación)</h2>
                 <label>Resolución</label>
                 <div class="form-inline">
                     <div class="input-group">
@@ -19,46 +80,5 @@
                 </div>
           </div>
       </div>
-      <div class="row">
-          <div class="col-xs-10 col-xs-offset-1 text-center" id="controls">
-            <div class="btn-group" role="group" aria-label="...">
-                <a class="btn btn-default" id="play" href="#"><span class="glyphicon glyphicon-play"></span>&nbsp; Reproducir</a>
-                <a class="btn btn-default" id="pause" href="#"><span class="glyphicon glyphicon-pause"></span>&nbsp; Pausar</a>
-                <a class="btn btn-default" id="clean" href="#"><span class="glyphicon glyphicon-unchecked"></span>&nbsp; Limpiar</a>
-                <a class="btn btn-default" id="random" href="#"><span class="glyphicon glyphicon-qrcode"></span>&nbsp; Aleatorio</a>
-             </div>
-          </div>
-      </div>
-      <div class="row">
-          <div class="col-xs-6 col-xs-offset-3 text-center" id="controls">
-            <div class="form-inline">
-                <label>Muerte por Sobrepoblación (cota superior)</label><br/>
-                <input type="range" min="0" max="8" list="tickmarks" id="overSlider" class="form-control slider-bar"/>
-                <datalist id="tickmarks">
-                  <option value="0">
-                  <option value="1">
-                  <option value="2">
-                  <option value="3">
-                  <option value="4">
-                  <option value="5">
-                  <option value="6">
-                  <option value="7">
-                  <option value="8">
-                </datalist>
-                <input type="number" class="form-control slider-number" id ="overValue"/>
-            </div>
-            <div class="form-inline">
-                <label>Muerte por Subpoblación (cota inferior)</label><br/>
-                <input type="range" min="0" max="8" list="tickmarks" id="subSlider" class="form-control slider-bar"/>
-                <input type="number" class="form-control slider-number" id ="subValue"/>
-            </div>
-            <div class="form-inline">
-                <label>Nacimiento (valor exacto)</label><br/>
-                <input type="range" min="0" max="8" list="tickmarks" id="birthSlider" class="form-control slider-bar"/>
-                <input type="number" class="form-control slider-number" id ="birthValue"/>
-            </div>
-          </div>
-      </div>
-      <div id="canvas" class="canvas-div text-center"></div>
   </body>
 </html>
