Size and resolution fiexed

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <label>Tamaño</label>
                             <div class="form-inline">
                                 <div class="input-group full-width">
-                                <input type="number" value="800" id="resolution" class="form-control text-center"><div class="input-group-addon">px</div>
+                                <input type="number" value="800" id="size" class="form-control text-center"><div class="input-group-addon">px</div>
                                 </div>
                             </div>
                             <br/>
