All controls working.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
           <div class="row">
               <div class="col-xs-4 col-xs-offset-2 text-center well" id="controls">
-                 <h2>Configuración Dinámica</h2>
+                 <h2>Reglas</h2>
                  <div class="form-inline">
                      <label>Reloj del mundo (tableros/segundo)</label><br/>
                      <input type="range" min="1" max="10" list="clockmarks" id="clockSlider" class="form-control slider-bar"/>
@@ -74,7 +74,7 @@
                 </div>
               </div>
               <div class="col-xs-4 col-xs-offset-1 text-center well">
-                    <h2>Configuración Estática</h2>
+                    <h2>Tamaño y Apariencia</h2>
                     <div class="row">
                         <div class="col-xs-6 text-center">
                             <label>Tamaño</label>
@@ -87,7 +87,7 @@
                             <label>Resolución</label>
                             <div class="form-inline">
                                 <div class="input-group full-width">
-                                <input type="number" value="10" id="resolution" class="form-control text-center"><div class="input-group-addon">px/px</div>
+                                <input type="number" value="10" id="resolution" class="form-control text-center"><div class="input-group-addon">px/c</div>
                                 </div>
                             </div>
                             <br/>
