All controls working.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <br/>
                             <div class="form-inline">
                                 <label>Bordes</label>&nbsp;&nbsp;&nbsp;
-                                <input type="checkbox" id="borders" checked/>
+                                <input type="checkbox" id="border" checked/>
                             </div>
                         </div>
                         <div class="col-xs-6 text-center">
