--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/addons/p5.dom.min.js"></script>
     <script src="js/sketch.js"></script>
     <script src="js/jscolor.min.js"></script>
+    <title>Conway's Game of Life por Ezequiel Wajs</title>
   </head>
   <body>
         <h1 class="title">Game of Life</h1>
