--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
               </div>
           </div>
 
-          <div class="row">
-              <div class="col-xs-4 col-xs-offset-2 text-center well" id="controls">
+          <div class="row well">
+              <div class="col-xs-4 col-xs-offset-2 text-center" id="controls">
                  <h2>Reglas</h2>
                  <div class="form-inline">
                      <label>Reloj del mundo (tableros/segundo)</label><br/>
@@ -74,7 +74,7 @@
                     <input type="number" class="form-control slider-number" id ="birthValue"/>
                 </div>
               </div>
-              <div class="col-xs-4 col-xs-offset-1 text-center well">
+              <div class="col-xs-4 col-xs-offset-1 text-center">
                     <h2>Tamaño y Apariencia</h2>
                     <div class="row">
                         <div class="col-xs-6 text-center">
