--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
               </div>
           </div>
 
-          <div class="row well">
+          <div class="row">
+              <div class="well">
               <div class="col-xs-4 col-xs-offset-2 text-center" id="controls">
                  <h2>Reglas</h2>
                  <div class="form-inline">
@@ -123,6 +124,7 @@
                                 <input type="hidden" id="borderColor" value="#000000">
                             </div>
                     </div>
+                  </div>    
               </div>
       </div>
   </body>
