--- a/index.html
+++ b/index.html
@@ -26,106 +26,107 @@
           </div>
 
           <div class="row">
-              <div class="well">
-              <div class="col-xs-4 col-xs-offset-2 text-center" id="controls">
-                 <h2>Reglas</h2>
-                 <div class="form-inline">
-                     <label>Reloj del mundo (tableros/segundo)</label><br/>
-                     <input type="range" min="1" max="10" list="clockmarks" id="clockSlider" class="form-control slider-bar"/>
-                     <datalist id="clockmarks">
-                         <option value="0">
-                         <option value="1">
-                         <option value="2">
-                         <option value="3">
-                         <option value="4">
-                         <option value="5">
-                         <option value="6">
-                         <option value="7">
-                         <option value="8">
-                         <option value="9">
-                         <option value="10">
-                     </datalist>
-                      <input type="number" class="form-control slider-number" id ="clockValue"/>
+            <div class="col-xs-10 col-xs-offset-1">
+              <div class="row well">
+                <div class="col-xs-4 col-xs-offset-2 text-center" id="controls">
+                   <h2>Reglas</h2>
+                   <div class="form-inline">
+                       <label>Reloj del mundo (tableros/segundo)</label><br/>
+                       <input type="range" min="1" max="10" list="clockmarks" id="clockSlider" class="form-control slider-bar"/>
+                       <datalist id="clockmarks">
+                           <option value="0">
+                           <option value="1">
+                           <option value="2">
+                           <option value="3">
+                           <option value="4">
+                           <option value="5">
+                           <option value="6">
+                           <option value="7">
+                           <option value="8">
+                           <option value="9">
+                           <option value="10">
+                       </datalist>
+                        <input type="number" class="form-control slider-number" id ="clockValue"/>
 
-                 </div>
-                <div class="form-inline">
-                    <label>Muerte por Sobrepoblación (cota superior)</label><br/>
-                    <input type="range" min="0" max="8" list="tickmarks" id="overSlider" class="form-control slider-bar"/>
-                    <datalist id="tickmarks">
-                      <option value="0">
-                      <option value="1">
-                      <option value="2">
-                      <option value="3">
-                      <option value="4">
-                      <option value="5">
-                      <option value="6">
-                      <option value="7">
-                      <option value="8">
-                    </datalist>
-                    <input type="number" class="form-control slider-number" id ="overValue"/>
+                   </div>
+                  <div class="form-inline">
+                      <label>Muerte por Sobrepoblación (cota superior)</label><br/>
+                      <input type="range" min="0" max="8" list="tickmarks" id="overSlider" class="form-control slider-bar"/>
+                      <datalist id="tickmarks">
+                        <option value="0">
+                        <option value="1">
+                        <option value="2">
+                        <option value="3">
+                        <option value="4">
+                        <option value="5">
+                        <option value="6">
+                        <option value="7">
+                        <option value="8">
+                      </datalist>
+                      <input type="number" class="form-control slider-number" id ="overValue"/>
+                  </div>
+                  <div class="form-inline">
+                      <label>Muerte por Subpoblación (cota inferior)</label><br/>
+                      <input type="range" min="0" max="8" list="tickmarks" id="subSlider" class="form-control slider-bar"/>
+                      <input type="number" class="form-control slider-number" id ="subValue"/>
+                  </div>
+                  <div class="form-inline">
+                      <label>Nacimiento (valor exacto)</label><br/>
+                      <input type="range" min="0" max="8" list="tickmarks" id="birthSlider" class="form-control slider-bar"/>
+                      <input type="number" class="form-control slider-number" id ="birthValue"/>
+                  </div>
                 </div>
-                <div class="form-inline">
-                    <label>Muerte por Subpoblación (cota inferior)</label><br/>
-                    <input type="range" min="0" max="8" list="tickmarks" id="subSlider" class="form-control slider-bar"/>
-                    <input type="number" class="form-control slider-number" id ="subValue"/>
+                <div class="col-xs-4 col-xs-offset-1 text-center">
+                      <h2>Tamaño y Apariencia</h2>
+                      <div class="row">
+                          <div class="col-xs-6 text-center">
+                              <label>Tamaño</label>
+                              <div class="form-inline">
+                                  <div class="input-group full-width">
+                                  <input type="number" value="800" id="size" class="form-control text-center"><div class="input-group-addon">px</div>
+                                  </div>
+                              </div>
+                              <br/>
+                              <label>Resolución</label>
+                              <div class="form-inline">
+                                  <div class="input-group full-width">
+                                  <input type="number" value="10" id="resolution" class="form-control text-center"><div class="input-group-addon">px/c</div>
+                                  </div>
+                              </div>
+                              <br/>
+                              <div class="form-inline">
+                                  <label>Bordes</label>&nbsp;&nbsp;&nbsp;
+                                  <input type="checkbox" id="border" checked/>
+                              </div>
+                          </div>
+                          <div class="col-xs-6 text-center">
+                              <label>Colores</label>
+                              <div class="form-inline text-right">
+                                  <strong>Vivo</strong>
+                                  <button class="jscolor {valueElement:'liveColor'} form-control">
+                                      &nbsp;&nbsp;
+                                  </button>
+                                  <input type="hidden" id="liveColor" value="#000000">
+                              </div>
+                              <br/>
+                              <div class="form-inline text-right">
+                                  <strong>Muerto</strong>
+                                  <button class="jscolor {valueElement:'deadColor'} form-control">
+                                      &nbsp;&nbsp;
+                                  </button>
+                                  <input type="hidden" id="deadColor" value="#FFFFFF">
+                              </div>
+                              <br/>
+                              <div class="form-inline text-right">
+                                  <strong>Borde</strong>
+                                  <button class="jscolor {valueElement:'borderColor'} form-control">
+                                      &nbsp;&nbsp;
+                                  </button>
+                                  <input type="hidden" id="borderColor" value="#000000">
+                              </div>
+                      </div>   
                 </div>
-                <div class="form-inline">
-                    <label>Nacimiento (valor exacto)</label><br/>
-                    <input type="range" min="0" max="8" list="tickmarks" id="birthSlider" class="form-control slider-bar"/>
-                    <input type="number" class="form-control slider-number" id ="birthValue"/>
-                </div>
-              </div>
-              <div class="col-xs-4 col-xs-offset-1 text-center">
-                    <h2>Tamaño y Apariencia</h2>
-                    <div class="row">
-                        <div class="col-xs-6 text-center">
-                            <label>Tamaño</label>
-                            <div class="form-inline">
-                                <div class="input-group full-width">
-                                <input type="number" value="800" id="size" class="form-control text-center"><div class="input-group-addon">px</div>
-                                </div>
-                            </div>
-                            <br/>
-                            <label>Resolución</label>
-                            <div class="form-inline">
-                                <div class="input-group full-width">
-                                <input type="number" value="10" id="resolution" class="form-control text-center"><div class="input-group-addon">px/c</div>
-                                </div>
-                            </div>
-                            <br/>
-                            <div class="form-inline">
-                                <label>Bordes</label>&nbsp;&nbsp;&nbsp;
-                                <input type="checkbox" id="border" checked/>
-                            </div>
-                        </div>
-                        <div class="col-xs-6 text-center">
-                            <label>Colores</label>
-                            <div class="form-inline text-right">
-                                <strong>Vivo</strong>
-                                <button class="jscolor {valueElement:'liveColor'} form-control">
-                                    &nbsp;&nbsp;
-                                </button>
-                                <input type="hidden" id="liveColor" value="#000000">
-                            </div>
-                            <br/>
-                            <div class="form-inline text-right">
-                                <strong>Muerto</strong>
-                                <button class="jscolor {valueElement:'deadColor'} form-control">
-                                    &nbsp;&nbsp;
-                                </button>
-                                <input type="hidden" id="deadColor" value="#FFFFFF">
-                            </div>
-                            <br/>
-                            <div class="form-inline text-right">
-                                <strong>Borde</strong>
-                                <button class="jscolor {valueElement:'borderColor'} form-control">
-                                    &nbsp;&nbsp;
-                                </button>
-                                <input type="hidden" id="borderColor" value="#000000">
-                            </div>
-                    </div>
-                  </div>    
-              </div>
+            </div>
       </div>
   </body>
 </html>
