--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
               <div class="row well">
-                <div class="col-xs-4 col-xs-offset-2 text-center" id="controls">
+                <div class="col-xs-5 text-center" id="controls">
                    <h2>Reglas</h2>
                    <div class="form-inline">
                        <label>Reloj del mundo (tableros/segundo)</label><br/>
@@ -76,7 +76,7 @@
                       <input type="number" class="form-control slider-number" id ="birthValue"/>
                   </div>
                 </div>
-                <div class="col-xs-4 col-xs-offset-1 text-center">
+                <div class="col-xs-5 col-xs-offset-1 text-center">
                       <h2>Tamaño y Apariencia</h2>
                       <div class="row">
                           <div class="col-xs-6 text-center">
