--- a/index.html
+++ b/index.html
@@ -16,11 +16,26 @@
           <div class="row">
               <div class="col-xs-10 col-xs-offset-1 text-center" id="controls">
                 <div class="btn-group" role="group" aria-label="...">
-                    <a class="btn btn-default" id="play"><span class="glyphicon glyphicon-play"></span>&nbsp; Reproducir</a>
-                    <a class="btn btn-default" id="pause"><span class="glyphicon glyphicon-pause"></span>&nbsp; Pausar</a>
+                    <a class="btn btn-default" id="beginning">&nbsp;<span class="glyphicon glyphicon-fast-backward"></span>&nbsp;</a>
+                    <a class="btn btn-default" id="back">&nbsp;<span class="glyphicon glyphicon-step-backward"></span>&nbsp;</a>
+                    <a class="btn btn-default" id="rec">&nbsp;<span class="glyphicon glyphicon-record"></span>&nbsp;</a>
+                    <a class="btn btn-default" id="forward">&nbsp;<span class="glyphicon glyphicon-step-forward"></span>&nbsp;</a>
+                    <a class="btn btn-default" id="ending">&nbsp;<span class="glyphicon glyphicon-fast-forward"></span>&nbsp;</a>
+                    <a class="btn btn-default" id="play">&nbsp;<span class="glyphicon glyphicon-play"></span>&nbsp;</a>
+                    <a class="btn btn-default" id="pause">&nbsp;<span class="glyphicon glyphicon-pause"></span>&nbsp;</a>
+                    <a class="btn btn-default" id="screen">&nbsp;<span class="glyphicon glyphicon-camera"></span>&nbsp;</a>
+                    <a class="btn btn-default" id="recording">&nbsp;<span class="glyphicon glyphicon-film"></span>&nbsp;</a>
+                 </div>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-xs-10 col-xs-offset-1 text-center" id="controls">
+                <div class="btn-group" role="group" aria-label="...">
                     <a class="btn btn-default" id="clean"><span class="glyphicon glyphicon-unchecked"></span>&nbsp; Limpiar</a>
                     <a class="btn btn-default" id="random"><span class="glyphicon glyphicon-qrcode"></span>&nbsp; Aleatorio</a>
                     <a class="btn btn-default" id="restore"><span class="glyphicon glyphicon-repeat"></span>&nbsp; Por defecto</a>
+                    <a class="btn btn-default" id="help"><span class="glyphicon glyphicon-question-sign"></span>&nbsp; Ayuda</a>
+                    <a class="btn btn-default" id="about"><span class="glyphicon glyphicon-info-sign"></span>&nbsp; Acerca de</a>
                  </div>
               </div>
           </div>
