--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
         <h1 class="title">Game of Life</h1>
           <div id="canvas" class="canvas-div text-center"></div>
           <div class="row">
-              <div class="col-xs-10 col-xs-offset-1 text-center" id="controls">
+              <div class="col-xs-10 col-xs-offset-1 text-center">
                 <div class="btn-group" role="group" aria-label="...">
                     <a class="btn btn-default" id="beginning">&nbsp;<span class="glyphicon glyphicon-fast-backward"></span>&nbsp;</a>
                     <a class="btn btn-default" id="back">&nbsp;<span class="glyphicon glyphicon-step-backward"></span>&nbsp;</a>
                     <a class="btn btn-default" id="rec">&nbsp;<span class="glyphicon glyphicon-record"></span>&nbsp;</a>
                     <a class="btn btn-default" id="forward">&nbsp;<span class="glyphicon glyphicon-step-forward"></span>&nbsp;</a>
                     <a class="btn btn-default" id="ending">&nbsp;<span class="glyphicon glyphicon-fast-forward"></span>&nbsp;</a>
+                    <a class="btn btn-default frame-counter" id="frames">0</a>
                     <a class="btn btn-default" id="play">&nbsp;<span class="glyphicon glyphicon-play"></span>&nbsp;</a>
                     <a class="btn btn-default" id="pause">&nbsp;<span class="glyphicon glyphicon-pause"></span>&nbsp;</a>
                     <a class="btn btn-default" id="screen">&nbsp;<span class="glyphicon glyphicon-camera"></span>&nbsp;</a>
@@ -29,7 +30,7 @@
               </div>
           </div>
           <div class="row">
-              <div class="col-xs-10 col-xs-offset-1 text-center" id="controls">
+              <div class="col-xs-10 col-xs-offset-1 text-center">
                 <div class="btn-group" role="group" aria-label="...">
                     <a class="btn btn-default" id="clean"><span class="glyphicon glyphicon-unchecked"></span>&nbsp; Limpiar</a>
                     <a class="btn btn-default" id="random"><span class="glyphicon glyphicon-qrcode"></span>&nbsp; Aleatorio</a>
