--- a/index.html
+++ b/index.html
@@ -95,6 +95,18 @@
                 <div class="col-xs-5 col-xs-offset-1 text-center">
                       <h2>Tamaño y Apariencia</h2>
                       <div class="row">
+                          <div class="col-xs-6 col-xs-offset-3 text-center">
+                              <div class="form-group">
+                                  <label for="shape">Forma de Celda</label>
+                                  <select class="form-control" id="shape">
+                                    <option>Cuadrado</option>
+                                    <option>Círculo</option>
+                                    <option>Redondeado</option>
+                                  </select>
+                               </div>
+                          </div>
+                      </div>
+                      <div class="row">
                           <div class="col-xs-6 text-center">
                               <label>Tamaño</label>
                               <div class="form-inline">
