--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
           <div class="row">
               <div class="col-xs-10 col-xs-offset-1 text-center">
                 <div class="btn-group" role="group" aria-label="...">
-                    <a class="btn btn-default" id="beginning">&nbsp;<span class="glyphicon glyphicon-fast-backward"></span>&nbsp;</a>
+                    <!-- <a class="btn btn-default" id="beginning">&nbsp;<span class="glyphicon glyphicon-fast-backward"></span>&nbsp;</a>
                     <a class="btn btn-default" id="back">&nbsp;<span class="glyphicon glyphicon-step-backward"></span>&nbsp;</a>
                     <a class="btn btn-default" id="rec">&nbsp;<span class="glyphicon glyphicon-record"></span>&nbsp;</a>
                     <a class="btn btn-default" id="forward">&nbsp;<span class="glyphicon glyphicon-step-forward"></span>&nbsp;</a>
                     <a class="btn btn-default" id="ending">&nbsp;<span class="glyphicon glyphicon-fast-forward"></span>&nbsp;</a>
-                    <a class="btn btn-default frame-counter" id="frames">0</a>
+                    <a class="btn btn-default frame-counter" id="frames">0</a> -->
                     <a class="btn btn-default" id="play">&nbsp;<span class="glyphicon glyphicon-play"></span>&nbsp;</a>
                     <a class="btn btn-default" id="pause">&nbsp;<span class="glyphicon glyphicon-pause"></span>&nbsp;</a>
-                    <a class="btn btn-default" id="screen">&nbsp;<span class="glyphicon glyphicon-camera"></span>&nbsp;</a>
-                    <a class="btn btn-default" id="recording">&nbsp;<span class="glyphicon glyphicon-film"></span>&nbsp;</a>
+                    <!-- <a class="btn btn-default" id="screen">&nbsp;<span class="glyphicon glyphicon-camera"></span>&nbsp;</a>
+                    <a class="btn btn-default" id="recording">&nbsp;<span class="glyphicon glyphicon-film"></span>&nbsp;</a> -->
                  </div>
               </div>
           </div>
@@ -142,6 +142,7 @@
                               </div>
                       </div>
                 </div>
+                <!--
                   <div class="row">
                       <div class="col-xs-6 col-xs-offset-3 text-center">
                           <div class="form-group">
@@ -153,6 +154,7 @@
                               </select>
                            </div>
                       </div>
+                  -->
                   </div>
             </div>
       </div>
